2010-04-19  Alexander V. Lukyanov <lav@yars.free.net>

	* GetJob.cc: make xfer:clobber=no by default.
	* FileCopy.cc, FileCopy.h: fixed retries counting on upload;
	  track upload watermark.
	* ftpclass.cc: handle 426 reply on upload specially;
	  retry FEAT after login on any 5xx reply but explicit unsup code.

2010-03-18  Alexander V. Lukyanov <lav@yars.free.net>

	* resource.cc, commands.cc: add setting xfer:auto-rename to control
	  server's suggested file name usage.

2010-03-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: prolong y2k workaround for next 300 years.

2010-03-05  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: (ssl-copy-sid) new setting; added
	  recognition of "too many users" condition in Transient5XX method;
	  more const on methods; shutdown ssl properly after CCC command.
	* resource.cc: (ftp:ssl-copy-sid) new setting; update RETRY_530 list.
	* Torrent.cc, Torrent.h: add black_list; refuse to start the same
	  torrent twice.

2010-02-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, network.cc, network.h: more const.
	* misc.h: (ListScanPtr) new macro.

2010-01-27  Alexander V. Lukyanov <lav@yars.free.net>

	* pgetJob.cc: resume transfer at the end when there is not status file
	  (fixes re-downloading of complete files and allows resuming of plain
	  transfers with pget).

2010-01-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: more restrictions on suggested file name.
	* FileCopy.cc: use suggested file name only if no such file exists.
	* GetJob.cc, FileCopy.cc: use O_EXCL when xfer:clobber is no.

2009-12-21  Alexander V. Lukyanov <lav@yars.free.net>

	* pgetJob.cc, pgetJob.h: add PrepareToDie method (fixes a core dump
	  on "kill all").
	* HttpDir.cc: don't use strlcpy.
	* Torrent.cc, Torrent.h: fix a warning on x86_64; when shutting down,
	  terminate immediately on a new signal.

2009-12-18  Alexander V. Lukyanov <lav@yars.free.net>
