@@ -128,6 +128,9 @@ static inline char *memrchr(char *buf,char c,size_t len) {
 const char *shell_encode(const char *);
 void remove_tags(char *buf);
 
+void random_init();
+double random01();
+
 #define ListAdd(type,chain,this,next)  \
 do {				       \
    this->next=chain;		       \
